2003-12-29: 0.54_01
            * Locale::Object itself now has functionality: creating compound
              objects that can contain country, currency and language objects.
              This is still incomplete, and the API is almost certainly going
              to change.
            * Altered tests and Converter.pm further after 0.53 test results
              for more robustness. No longer has Finance::Currency::Convert::XE
              and Finance::Currency::Convert::Yahoo as requirements.
            * Language.pm's countries() will now return an array in array 
              context. Added missing documentation for method.
            * Changed tests to use isa_ok().
            * Removed an incorrect line of documentation from Language.pm.

2003-12-22: 0.53
            * Removed a chunk of old code that had got back into DB.pm 
              somehow and was causing warnings.
            * Modified Converter.pm to try and deal with errors a little 
              better.
            * Changed tests in 06converter.t to only indicate if conversions 
              don't succeed, rather than fail and break installation - if 
              they don't succeed, it may be a network problem rather than one
              with the module. (Thanks to Jost Krieger and Barbie for test 
              results prompting this change.)

2003-12-18: 0.52
            * Made Continent.pm, Country.pm, Currency.pm and Language.pm 
              subclasses of Object.pm so they could share one new() method for
              code efficiency. Also fixed them to have get/set methods for
              internal attributes to improve robustness. Thanks to JDUNCAN
              for both these suggestions.
              
2003-12-18: 0.51
            * Slight documentation patch.

2003-12-17: 0.5
            * Added new module: Locale::Object::Currency::Converter.

2003-12-16: 0.41
            * Added UTC offset data to the db.