@@ -1,12 +1,12 @@
 --- #YAML:1.0
 name: Locale-Object
-version: 0.54_01
+version: 0.54_02
 license: perl
 distribution_type: module
 requires:
   DBD::SQLite: 0
   DBI: 0
-  Scalar::Util: 0.1
+  Scalar::Util: 1.1
   perl: 5.6.0
 recommends: {}
 build_requires:
@@ -17,7 +17,7 @@ conflicts: {}
 provides:
   Locale::Object:
     file: lib/Locale/Object.pm
-    version: 0.54_01
+    version: 0.54_02
   Locale::Object::Continent:
     file: lib/Locale/Object/Continent.pm
     version: 0.23
